# AaDS-SET3-A3

./: A3i.cpp  CMakeLists.txt  tests.cpp
ArrayGenerator/: ArrayGenerator.cpp  ArrayGenerator.h
Plotting/: A3.py
SortTester/: SortTester.cpp  SortTester.h
Sorter/: Sorter.cpp  Sorter.h
TestData/: tests.csv
